--- a/src/app/components/Nav/Nav.css
+++ b/src/app/components/Nav/Nav.css
@@ -1,5 +1,4 @@
 #navBar-container{
-
     height: 10vh;
     width: 100vw;
     display: flex;
@@ -23,18 +22,18 @@
     justify-content: space-around;
 }
 .leftNav{
-    flex:5;
+    flex:8;
 }
 .rightNav{
-    justify-content: space;
-    flex:3;
+    flex:1;
     display: flex;
+    padding-right: 4vw;
 }
 .navItem{
     height: 5vh;
     flex: 1;
-    width: auto;
-    margin: 1vw;
+    position: relative;
+    margin: 0.5vw;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -49,29 +48,19 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    transform: translate(-1.5vw, 0);
     color: var(--primary);
     border-radius: 1vh;
 }
-#langSelect{
-    background-color: var(--primary);
-    width: 6vw;
-    height: 5vh;
-    position: absolute;
-    border-radius: 1vh;
-    transition: 0.2s ease-in-out;
-    z-index: 2;
-}
-
 #themeContainer{
-    background-color: var(--palewhite);
+    background-color: var(--tertiary);
     height: 5vh;
-    width: 5.6vw;
-    display: flex;
-    border-radius: 1vw;
+    aspect-ratio: 2/1;
+    transform: translate(-50%, 0%);
+    border-radius: 2vw;
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 .icon-container{
     flex: 1;
@@ -83,18 +72,20 @@
     display: flex;
 }
 #themeSelector{
-    --xpos:2.6;
-    background-color: var(--primary);
-    width: 2.9vw;
+    position: relative;
+    height: calc(100%);
+    outline: 0.3vw solid var(--primary);
+    outline-offset: -0.1vw;
     aspect-ratio: 1;
-    position: absolute;
-    border-radius: 3vh;
-    transform: translate(0vw,0);
-    z-index: 2;
+    background-color: var(--primary);
     transition: 0.2s ease-in-out;
+    transform: translate(-50%, 0%);
+    border-radius: 2vw;
+    z-index: 2;
+    position: absolute;
 }
 #themeContainer img{
-    height: 3vh;
+    height: 2vh;
     width: auto;
     z-index: 3;
 }
@@ -113,15 +104,15 @@
 }
 .optionsBar{
     background-color: var(--primary);
-    width: 3.6vh;
-    height: 0.5vh;
+    width: 2.6vh;
+    padding: 0.25vh;
     margin: 0.3vh;
     border-radius: 4vh;
     transform-origin: center;
     transition: 0.5s;
 }
 #moreOptions:hover .optionsBar{
-    background-color: var(--palewhite);
+    background-color: var(--light);
  }
 
 
