--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,8 +4,9 @@
   --palewhite: #EFEFEF;
   --primary: #80A6ED;
   --secondary: #476DB3;
-  --secondarya: #476db3ae;
+  --secondaryA: #476db35e;
   --tertiary: #6E7FA5;
+  --light: #A5BCE555;
   --background: #E1E5EE;
 }
 
